--- a/es/index.html
+++ b/es/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>Falzon Attroney</title>
+	<title>Falzon Attorney</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -65,9 +65,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_agileits_social_media">
 					<ul>
 						<li class="agileinfo_share">Compartir en</li>
-						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
 					</ul>
 				</div>
 				<div class="clearfix"></div>
@@ -183,7 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</div>
 				<div class="col-md-6 agileits_courses_right">
-					<img src="../img/tonyfalzon1_720 (1).png" alt=" " class="img-responsive">
+					<img src="../images/seated.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -239,7 +239,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="client">
 		<div class="container">
 			<h3 id="testim" class="w3ls_head">Testimonials</h3>
-			<p class="w3l">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 			<!--screen-gallery-->
 			<div class="sreen-gallery-cursual">
 				<!-- required-js-files-->
@@ -263,20 +262,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="../images/team1.jpg" alt=""></div>
+									<div class="quotes"><img src="../images/gerry.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a id="names" href="#">Michael , Customer </a>
+										<p> I have known Anthony for the past twelve years. Three years ago, I found myself in need of an attorney specializing in employment law. I found Anthony to be a consummate professional, personable, a strong advocate for his client, skilled, ethical, and honest. Anthony sets a high bar for his profession and his clients are well served.</p>
+										<a id="names" href="#">Gerry Vergason, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="../images/team2.jpg" alt=""></div>
+									<div class="quotes"><img src="../images/marta.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a  id="names"href="#">John , Customer </a>
+										<p> I asked Mr Falzon to represent me when I was going through an extremely hard time, he was very professional, he did a very good job, but that's expected, what I did not expect was the extra mile, the human warmth; I would definitely use his services again.</p>
+										<a  id="names"href="#">Marta Mack, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -287,27 +286,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="../images/team3.jpg" alt=""></div>
+									<div class="quotes"><img src="../images/daniel.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a  id="names"href="#">Michael , Customer </a>
+										<p> I have known Anthony for over 10 years. He is very well educated, conscientious and a diligent advocate. An excellent attorney!</p>
+										<a  id="names"href="#">Daniel Morman, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="../images/team4.jpg" alt=""></div>
+									<div class="quotes"><img src="../images/ilya.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a  id="names"href="#">John , Customer </a>
+										<p> Tony has helped me to settle with my previous employer by significantly improving my severance package. It was a job well done. Mind you, he is not a typical lawyer, but a normal human being !</p>
+										<a  id="names"href="#">Ilya Ovsishcher , Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="item-owl">
+					<!-- <div class="item-owl">
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
@@ -330,11 +329,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<!--//screen-gallery-->
 		</div>
+		<p class="w3l">This information has not been reviewed or approved by The Florida Bar. Each client’s facts and circumstances differ, and these testimonials are not necessarily representative of all clients’ experience with our lawyers.</p>
 	</div>
 	<!--//client-->
 	<!-- what -->
@@ -395,10 +395,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
       <div class="w3ls-social-icons">
         <h3>Síganos</h3>
-        <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-        <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+        <a class="facebook" href="https://www.facebook.com/falzonlaw/"><i class="fa fa-facebook"></i></a>
+        <!-- <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
         <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a> -->
       </div>
 			<div class="footer-w3layouts">
 
