--- a/es/services.html
+++ b/es/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Executive a Corporate Business Category Flat Bootstrap Responsive Website Template | Services :: w3layouts</title>
+	<title>Areas Legales || Falzon Attorney</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -57,9 +57,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_agileits_social_media">
 					<ul>
 						<li class="agileinfo_share">Compartir En</li>
-						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
 
 					</ul>
 				</div>
@@ -374,10 +374,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="container">
 		      <div class="w3ls-social-icons">
 		        <h3>SÍGANOS</h3>
-		        <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-		        <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+		        <a class="facebook" href="https://www.facebook.com/falzonlaw/"><i class="fa fa-facebook"></i></a>
+		        <!-- <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
 		        <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-		        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+		        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a> -->
 		      </div>
 					<div class="footer-w3layouts">
 
