--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 
 <head>
-	<title>Falzon Attroney</title>
+	<title>Falzon Attorney</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -65,9 +65,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_agileits_social_media">
 					<ul>
 						<li class="agileinfo_share">Share On</li>
-						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
 
 					</ul>
 				</div>
@@ -164,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					});
 				</script>
 				<!-- //flexSlider -->
-			</div> 
+			</div>
 		</div>
 	</div>
 	<!-- //banner -->
@@ -179,16 +179,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Mr. Falzon Biography</h3>
-							<p>Mr. Falzon was admitted to the Florida Bar in 1995. He originally qualified as a lawyer in England after obtaining a joint degree in English and French law from the University of Kent and the University of Paris. Mr. Falzon obtained a Master's
-								in Law degree from Trinity Hall, Cambridge University and was awarded the Thomas Waraker postgraduate scholarship in law. After practicing in London and New York with a City of London firm of lawyers, Mr. Falzon obtained a J.D. from the University
-								of Pennsylvania and was awarded the Philadelphia Trial Lawyers Association Award for Trial Advocacy when he graduated in 1995. He is a member of the Florida Bar, the National Employment Lawyers Association and the GALLA.</p>
+							<p>Mr. Falzon was admitted to the Florida Bar in 1995.  He originally qualified as a lawyer in England after obtaining a joint degree in English and French law from the University of Kent and the University of Paris.  Mr. Falzon obtained a Master's in Law degree from Trinity Hall, Cambridge University and was awarded the Thomas Waraker postgraduate scholarship in law.  After practicing in London and New York with a City of London firm of lawyers, Mr. Falzon obtained a J.D. from the University of Pennsylvania and was awarded the Philadelphia Trial Lawyers Association Award for Trial Advocacy when he graduated in 1995.  He is a member of the Florida Bar, the National Employment Lawyers Association and the GALLA. </p>
 						</div>
 
 
 					</div>
 				</div>
 				<div class="col-md-6 agileits_courses_right">
-					<img src="img/tonyfalzon1_720 (1).png" alt=" " class="img-responsive">
+					<img src="images/seated.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -244,7 +242,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="client">
 		<div class="container">
 			<h3 id="testim" class="w3ls_head">Testimonials</h3>
-			<p class="w3l">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 			<!--screen-gallery-->
 			<div class="sreen-gallery-cursual">
 				<!-- required-js-files-->
@@ -268,20 +265,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="images/team1.jpg" alt=""></div>
+									<div class="quotes"><img src="images/gerry.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a id="names" href="#">Michael , Customer </a>
+										<p> I have known Anthony for the past twelve years. Three years ago, I found myself in need of an attorney specializing in employment law. I found Anthony to be a consummate professional, personable, a strong advocate for his client, skilled, ethical, and honest. Anthony sets a high bar for his profession and his clients are well served.</p>
+										<a id="names" href="#">Gerry Vergason, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="images/team2.jpg" alt=""></div>
+									<div class="quotes"><img src="images/marta.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a  id="names"href="#">John , Customer </a>
+										<p> I asked Mr Falzon to represent me when I was going through an extremely hard time, he was very professional, he did a very good job, but that's expected, what I did not expect was the extra mile, the human warmth; I would definitely use his services again.</p>
+										<a  id="names"href="#">Marta Mack, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -292,27 +289,27 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="images/team3.jpg" alt=""></div>
+									<div class="quotes"><img src="images/daniel.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a  id="names"href="#">Michael , Customer </a>
+										<p> I have known Anthony for over 10 years. He is very well educated, conscientious and a diligent advocate. An excellent attorney!</p>
+										<a  id="names"href="#">Daniel Morman, Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
-									<div class="quotes"><img src="images/team4.jpg" alt=""></div>
+									<div class="quotes"><img src="images/ilya.jpg" alt=""></div>
 									<div class="de_testi_by">
-										<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.</p>
-										<a  id="names"href="#">John , Customer </a>
+										<p> Tony has helped me to settle with my previous employer by significantly improving my severance package. It was a job well done. Mind you, he is not a typical lawyer, but a normal human being !</p>
+										<a  id="names"href="#">Ilya Ovsishcher , Client </a>
 									</div>
 									<div class="clearfix"></div>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="item-owl">
+					<!-- <div class="item-owl">
 						<div class="customer-say">
 							<div class="col-md-6 customer-grid">
 								<div class="de_testi">
@@ -335,11 +332,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<!--//screen-gallery-->
 		</div>
+		<p class="w3l">This information has not been reviewed or approved by The Florida Bar. Each client’s facts and circumstances differ, and these testimonials are not necessarily representative of all clients’ experience with our lawyers.</p>
 	</div>
 	<!--//client-->
 	<!-- what -->
@@ -352,7 +350,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="img/TonyFalzon3.jpg" class="img-responsive" alt="" />
 					<div class="what-agile-info">
 
-						<p>Mr. Falzon's fee arrangements are flexible and try to take account of the different needs of clients. All Initial Consultations are FREE until we reach an agreement on fees.</p>
+						<p>Mr. Falzon's fee arrangements are flexible and try to take account of the different needs of clients. </p>
 					</div>
 				</div>
 				<div class="col-md-6 what-grid1">
@@ -362,8 +360,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="what-right">
 							<h4 id="fees-costs">Fees and Costs</h4>
-							<p>Whether you call me or meet with me you will not be charged a fee for an initial consultation. After the initial consultation and assessment of your case, Mr. Falzon will expect you to sign a retainer agreement. You can agree to sign an agreement
-								and move forward with representation or you may decide otherwise.
+							<p>All Initial Consultations are FREE until  an agreement is reached on fees.  Whether you call Mr. Falzon or meet with him you will not be charged a fee for an initial consultation.  After the initial consultation and assessment of your case, Mr. Falzon will expect you to sign a retainer agreement.  You can agree to sign an agreement and move forward with representation or you may decide otherwise.
 							</p>
 						</div>
 						<div class="clearfix"></div>
@@ -374,8 +371,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="what-right">
 
-							<p>Mr. Falzon generally expects to handle Plaintiff personal injury and employment cases on CONTINGENCY. That means that the client does not owe a fee unless Mr. Falzon recovers money or obtains some other agreed upon result, such as reinstatement
-								to your job. However, clients are expected to pay out of pocket costs that are incurred once suit is filed as they are incurred.
+							<p>Mr. Falzon generally expects to handle Plaintiff personal injury and employment cases on CONTINGENCY.  That means that the client does not owe a fee unless Mr. Falzon recovers money or obtains some other agreed upon result, such as reinstatement to your job.  In personal injury cases Mr. Falzon fronts all costs.  However, in employment cases clients are expected to pay out of pocket costs that are incurred once suit is filed as they are incurred.  Mr. Falzon will discuss the potential amount of these anticipated costs as the litigation proceeds.  Costs usually include the filing fee for bringing an action ($401), the fee for serving suit on your employer ($40), court reporter fees, expert witness fees and deposition fees.  These fees must be paid by the client in advance of them being incurred.
 							</p>
 						</div>
 						<div class="clearfix"></div>
@@ -386,8 +382,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="what-right">
 
-							<p>Mr. Falzon will discuss the potential amount of these anticipated costs as the litigation proceeds. Costs usually include the filing fee for bringing an action ($401), the fee for serving suit on your employer ($40), court reporter fees and deposition
-								fees. These fees must be paid by the client in advance of them being incurred. </p>
+							<p>Mr. Falzon charges by the hour for defending disciplinary action cases, defending employers or handling other types of civil cases as well as all appeals.  Time is charged in increments of 1/10 of an hour plus out of pocket costs.  </p>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -404,10 +399,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
       <div class="w3ls-social-icons">
         <h3>Follow Us</h3>
-        <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-        <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+        <a class="facebook" href="https://www.facebook.com/falzonlaw/"><i class="fa fa-facebook"></i></a>
+        <!-- <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
         <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a> -->
       </div>
 			<div class="footer-w3layouts">
 
