--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Executive a Corporate Business Category Flat Bootstrap Responsive Website Template | Services :: w3layouts</title>
+	<title>Services || Falzon Attorney</title>
 	<!-- for-mobile-apps -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -57,9 +57,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_agileits_social_media">
 					<ul>
 						<li class="agileinfo_share">Share On</li>
-						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
 
 					</ul>
 				</div>
@@ -123,9 +123,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Personal Injury and Accidents</h3>
-							<p>Anthony Falzon has represented hundreds of persons injured in a variety of accidents varying from motor vehicle claims, persons who have been injured by medical malpractice, in workplace accidents or by defective machinery. Mr. Falzon obtained
-								millions of dollars in compensation for his clients over the course of his career. He will often take on challenging cases that are turned down by other firms looking for a quick settlement. In 2012 Mr. Falzon broke new ground nationwide when
-								he successfully argued that juries in Florida should be allowed to award punitive damages against a driver who causes injuries while texting and driving.</p>
+							<p>Anthony Falzon has represented hundreds of persons injured in a variety of accidents varying from motor vehicle claims, persons who have been injured by medical malpractice, employees injured in workplace accidents or consumers injured by defective machinery.  Mr. Falzon has obtained millions of dollars in compensation for his clients over the course of his career.  He will often take on challenging cases that are turned down by other firms.  In 2012 Mr. Falzon broke new ground nationwide when he successfully argued that juries in Florida should be allowed to award punitive damages against a driver who causes injuries while texting and driving. </p>
 						</div>
 					</div>
 				</div>
@@ -143,8 +141,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Unpaid Wages and Overtime</h3>
-							<p>Employers in South Florida have a reputation for failing to pay their employees the proper wages due to them. Mr. Falzon has represented employees and deserving employers in all types of unpaid wages and overtime cases in state and federal court.
-								Whether your case is about minimum wage violations, unpaid wages and overtime, disputed commissions, bonuses or severance pay due to you Mr. Falzon will ensure that you are paid all monies owed to you by your employer.</p>
+							<p>Employers in South Florida have a reputation for failing to pay their employees the proper wages owed to them.  Mr. Falzon has represented employees in all types of unpaid wages and overtime cases in state and federal court.  Whether your case is about minimum wage violations, unpaid wages and overtime, disputed commissions, bonuses or severance pay due to you Mr. Falzon will ensure that you are paid all monies owed to you by your employer.</p>
 						</div>
 					</div>
 				</div>
@@ -156,9 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Severance Agreements</h3>
-							<p>Many times employers will present employees that they have just terminated with a severance agreement for them to sign in exchange for a sum of money. These agreements usually come with strings attached. The employee must give up all their claims
-								and legal rights in exchange for the money paid pursuant to that agreement. You should not sign a severance agreement without having an attorney review both the agreement and the circumstances surrounding your dismissal. Mr. Falzon will review
-								your agreement, the circumstances of your dismissal and any potential causes of action that you may have against your employer and in many cases may be able to negotiate an enhanced severance payment.</p>
+							<p>Many times employers will present employees that they have just fired with a severance agreement for the employee to sign in exchange for a sum of money.  These agreements usually come with strings attached.  The employee must give up all the employee's claims and legal rights to sue their employer in exchange for the money paid pursuant to that agreement.  Employees should not sign a severance agreement without having an attorney review both the agreement and the circumstances surrounding the employee's dismissal.  Mr. Falzon will review your agreement, the circumstances of your dismissal and any potential causes of action that you may have against your employer and in many cases may be able to negotiate an enhanced severance payment.</p>
 						</div>
 					</div>
 				</div>
@@ -176,9 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Workplace Discrimination</h3>
-							<p>Florida is a right to work state which essentially means that you may be fired for any legal reason or no reason if you are not a member of a union, a public employee or have a written employment agreement. However you may not be fired for a discriminatory
-								reason - your race, color, sex, age, national origin, religion, marital status, the fact that you are pregnant, your sexual orientation or your gender identity. Mr. Falzon is experienced in handling discrimination claims on behalf of employees
-								at the federal, state and local level.</p>
+							<p>Florida is a right to work state which essentially means that you may be fired for any legal reason or no reason if you are not a member of a union, a public employee or have a written employment agreement.  However you may not be fired for a discriminatory reason - your race, color, sex, age, national origin, religion, marital status, the fact that you are pregnant, your sexual orientation or your gender identity.  Mr. Falzon is experienced in handling discrimination claims on behalf of employees at the federal, state and local level. </p>
 						</div>
 					</div>
 				</div>
@@ -190,8 +183,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Workplace Harassment</h3>
-							<p>The law forbids sexual harassment and other forms of harassment whether you are being harassed because of your race, your sex, your sexual orientation or gender identity. Whether your supervisor is taking action against you because of your refusal
-								to agree to his or her sexual demands or making your work environment intolerable for other illegal reasons Mr. Falzon will represent your interests.</p>
+							<p>The law forbids sexual harassment and other forms of harassment whether you are being harassed because of an employee's race,  sex, sexual orientation or gender identity.  Whether your employer is taking action against you because of your refusal to agree to his or her sexual demands or making your work environment intolerable for other illegal reasons Mr. Falzon will represent your interests.</p>
 						</div>
 					</div>
 				</div>
@@ -210,7 +202,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>LGBT Discrimination</h3>
-							<p>The law has been developing rapidly in the field of LGBT rights. LGBT employees can now seek redress for discrimination, harassment and retaliation by their employers based on their sexual orientation or gender identity.</p>
+							<p>The law has been developing rapidly in the field of LGBT rights.  LGBT employees can now seek legal redress for discrimination, harassment and retaliation by their employers based on their sexual orientation or gender identity.</p>
 						</div>
 					</div>
 				</div>
@@ -222,8 +214,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Retaliation and Whistleblower statutes</h3>
-							<p>The law forbids an employer from taking adverse action against you because you complain about your employer's illegal conduct and activities. Nor may an employer retaliate against an employee for making a worker's compensation claim or for complaining
-								about discrimination and harassment.</p>
+							<p>The law forbids an employer from taking adverse action against you because you complain about your employer's illegal conduct and activities or because you oppose an employer's illegal practices.  Nor may an employer retaliate against an employee for making a worker's compensation claim or for complaining about discrimination and harassment. </p>
 						</div>
 					</div>
 				</div>
@@ -241,9 +232,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
 							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Family and Medical Leave Act and Disability Discrimination</h3>
-							<p>The law guarantees certain employees the right to take unpaid time off work due to a personal illness or to care for a sick relative. An employer may not interfere with an employee's right to Family and Medical leave and may not retaliate against
-								an employee who asserts their legal rights under the law. Furthermore if an employee has a recognized disability then an employer may not discriminate against the employee and must take affirmative steps to accommodate the employee's disability.
-								A disability be either physical or mental irrespective of whether the disability is long term or short term.</p>
+							<p>The law guarantees certain employees the right to take unpaid time off work due to a personal illness or to care for a sick relative.  An employer may not interfere with an employee's right to Family and Medical leave and may not retaliate against an employee who asserts their legal rights under the law.  Furthermore if an employee has a recognized disability then an employer may not discriminate against the employee and must take affirmative steps to accommodate the employee's disability.  A disability can be either physical or mental and is covered by the law irrespective of whether the disability is long term or short term.</p>
 						</div>
 					</div>
 				</div>
@@ -254,24 +243,36 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-6 w3ls_banner_bottom_left w3ls_courses_left">
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
-							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Civil Litigation and Appeals</h3>
-							<p>Mr. Falzon also handles a variety of other civil disputes whether in the field of general civil litigation (common law disputes in contract and tort) or in probate and guardianship court. Mr. Falzon handles cases from the trial to the appellate
-								level. Whether you need representation in front of an administrative tribunal, in arbitration proceedings or in state or federal court, Mr. Falzon will handle your case from intake through the presuit process, trial and any necessary appeals.
-								Many trial lawyers are not comfortable handling appeals but Mr. Falzon has handled appeals in both state and federal appellate courts and is familiar with the rules that apply in an appellate forum. Mr. Falzon may be able to assist you if your
-								attorney has declined to handle an appeal or if you feel you need different counsel to take a fresh approach on appeal.</p>
+							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Representation of Employers</h3>
+							<p>While Mr. Falzon's employment clients are usually employees, Mr. Falzon does represent small employers from time to time.  Employment laws contain many exceptions and exemptions exempting small business owners and Mr. Falzon has been successful in assisting small business owners prevail where they have been sued unjustly.  He has also advised small employers which are growing their revenues and employees on setting in place workplace rules and practices that ensure that these employers are fully compliant with all federal, state and local rules governing the workplace. </p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-6 agileits_courses_right">
-					<img src="services-img/civil.jpg" alt=" " class="img-responsive">
+					<img src="services-img/empleador.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 			</div>
 
 			<div class="agileits_w3layouts_team_grids w3ls_courses_grids">
-				<div class="col-md-6 agileits_courses_left">
-					<img src="services-img/international.jpg" alt=" " class="img-responsive">
+				<div class="col-md-6 agileits_courses_right">
+					<img src="services-img/civil.jpg" alt=" " class="img-responsive">
 				</div>
+				<div class="col-md-6 w3ls_banner_bottom_left w3ls_courses_left">
+					<div class="w3ls_courses_left_grids">
+						<div class="w3ls_courses_left_grid">
+							<h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Civil Litigation and Appeals</h3>
+							<p>Mr. Falzon also handles a variety of other civil disputes whether in the field of general civil litigation (common law disputes in contract and tort) or in probate and guardianship court. Mr. Falzon handles cases from the trial to the appellate
+								level. Whether you need representation in front of an administrative tribunal, in arbitration proceedings or in state or federal court, Mr. Falzon will handle your case from intake through the presuit process, trial and any necessary appeals.
+								Many trial lawyers are not comfortable handling appeals but Mr. Falzon has handled appeals in both state and federal appellate courts and is familiar with the rules that apply in an appellate forum. Mr. Falzon may be able to assist you if your
+								attorney has declined to handle an appeal or if you feel you need different counsel to take a fresh approach on appeal.</p>
+							</div>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+			</div>
+
+			<div class="agileits_w3layouts_team_grids w3ls_courses_grids">
 				<div class="col-md-6 w3ls_banner_bottom_left w3ls_courses_right">
 					<div class="w3ls_courses_left_grids">
 						<div class="w3ls_courses_left_grid">
@@ -279,6 +280,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<p>Mr. Falzon has studied and practiced law in Europe (England and France) as well as the United States (New York and Florida) and is familiar with both civil and common law jurisdictions.</p>
 						</div>
 					</div>
+				</div>
+				<div class="col-md-6 agileits_courses_left">
+					<img src="services-img/international.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="clearfix"> </div>
 			</div><br><br><br>
@@ -374,10 +378,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="container">
 		      <div class="w3ls-social-icons">
 		        <h3>Follow Us</h3>
-		        <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-		        <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+		        <a class="facebook" href="https://www.facebook.com/falzonlaw/"><i class="fa fa-facebook"></i></a>
+		        <!-- <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
 		        <a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-		        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+		        <a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a> -->
 		      </div>
 					<div class="footer-w3layouts">
 
