--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Executive a Corporate Business Category Flat Bootstrap Responsive Website Template | Contact :: w3layouts</title>
+<title>Contact || Falzon Attorney</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -55,9 +55,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="w3_agileits_social_media">
 					<ul>
 						<li class="agileinfo_share">Share On</li>
-						<li><a href="#" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.facebook.com/falzonlaw/" class="wthree_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<!-- <li><a href="#" class="wthree_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li><a href="#" class="wthree_dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li> -->
 
 					</ul>
 				</div>
@@ -71,7 +71,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<h1><a class="navbar-brand" href="index.html"></a></h1>
+					<h1 id="header-title"><a class="navbar-brand" href="index.html">
+						<img id="logo" src="img/logonoletters_360.png" alt="">
+						<h3 id="logo-title">Anthony V Falzon <br>P.A Law Offices</h3>
+					</a>
+						</h1>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
@@ -101,7 +105,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="contact">
 		<div class="container">
 			<h2 class="w3ls_head">Contact</h2>
-			<p class="w3layouts_para">Fusce quis leo in augue ultricies tincidunt a quis mi. Donec at massa nec sem eleifend fermentum.</p>
+			<!-- <p class="w3layouts_para">Fusce quis leo in augue ultricies tincidunt a quis mi. Donec at massa nec sem eleifend fermentum.</p> -->
 			<div class="contact-right-w3-agile">
 			<form action="#" method="post">
 				<input type="text" name="Name" placeholder="Name" required="">
@@ -120,10 +124,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="w3ls-social-icons">
 			<h3>Follow Us</h3>
-			<a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-			<a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-			<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a>
-			<a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a>
+			<a class="facebook" href="https://www.facebook.com/falzonlaw/"><i class="fa fa-facebook"></i></a>
+			<!-- <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+			<a class="pinterest" href="#"><i class="fa fa-pinterest"></i></a> -->
+			<!-- <a class="linkedin" href="https://www.linkedin.com/in/anthony-falzon-3a124816/"><i class="fa fa-linkedin"></i></a> -->
 		</div>
 		<div class="footer-w3layouts">
 
