--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</button>
 					<h1 id="header-title"><a class="navbar-brand" href="index.html">
 						<img id="logo" src="images/logonoletters_360.png" alt="">
-						<h3 id="logo-title">The Law Offices of<br>Anthony V Falzon, P.A</h3>
+						<h3 id="logo-title">The Law Offices of<br>Anthony V. Falzon P.A.</h3>
 					</a>
 						</h1>
 				</div>
